# swarmagent

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
deploy/k8s/: swarmagent.yaml
docs/: PLAN-multi-orchestrator.md  PROMPT-swarmbot-k3s.md
src/: config.rs  container_stats.rs  detect.rs  host.rs  main.rs  models.rs  sink.rs  web.rs
src/provider/: docker.rs  mod.rs
src/provider/kubernetes/: client.rs  events.rs  mod.rs  pods.rs  summary.rs
src/tasks/: events.rs  mod.rs  stats.rs
